...
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/body" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Getting around the bowel"
                android:textColor="@color/black"
...
